Update vscode workspace settings
Add:

- Words to to cspell dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "Characterset",
+        "Dcom",
         "methodname",
-        "Startmode",
-        "Dcom"
+        "securestring",
+        "Startmode"
     ]
 }
